--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             -webkit-backdrop-filter: blur(5px);
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5982796088407973"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-black text-gray-200">
 
@@ -557,4 +559,5 @@
     </script>
 </body>
 </html>
+
 
